# logq

./: .dockerignore  .gitignore  API.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs
.github/workflows/: docker.yml  release.yml
docs/: index.html
packaging/homebrew/: logq.rb.tmpl
scripts/: update-homebrew.sh
src/: db.rs  main.rs  remote.rs  saved.rs  scan.rs  server.rs  source.rs  tail.rs  zst.rs
static/: index.html
